logs/gpudb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gpudb'...
Listing './lib/python3.5/site-packages/gpudb/packages'...
Listing './lib/python3.5/site-packages/gpudb/packages/avro'...
Listing './lib/python3.5/site-packages/gpudb/packages/avro/avro_py2'...
Compiling './lib/python3.5/site-packages/gpudb/packages/avro/avro_py2/io.py'...
***   File "./lib/python3.5/site-packages/gpudb/packages/avro/avro_py2/io.py", line 206
    bits = (((ord(self.read(1)) & 0xffL)) |
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gpudb/packages/avro/avro_py2/ipc.py'...
***   File "./lib/python3.5/site-packages/gpudb/packages/avro/avro_py2/ipc.py", line 325
    except AvroRemoteException, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gpudb/packages/avro/avro_py2/schema.py'...
***   File "./lib/python3.5/site-packages/gpudb/packages/avro/avro_py2/schema.py", line 340
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gpudb/packages/avro/avro_py2/tool.py'...
***   File "./lib/python3.5/site-packages/gpudb/packages/avro/avro_py2/tool.py", line 85
    print "Port: %s" % server.server_port
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gpudb/packages/avro/avro_py3'...
Listing './lib/python3.5/site-packages/gpudb-6.1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
